# System_Workflow_OLP

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  index.html  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
apps/core/: admin.py  permissions.py  tasks.py
apps/core/management/commands/: seed_groups.py  seed_superuser.py
apps/core/middleware/: current_user.py
apps/core/models/: __init__.py  base.py  soft_delete.py
apps/core/tests/: test_admin_sidebar.py
apps/users/: admin.py  models.py
apps/users/api/: serializers.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: factories.py  test_api.py  test_models.py
apps/workflows/: __init__.py  apps.py  exceptions.py  models.py  tasks.py
apps/workflows/api/: __init__.py  serializers.py  views.py
apps/workflows/engine/: __init__.py  executor.py
apps/workflows/migrations/: 0001_initial.py  0002_alter_noderunlog_error_message.py  0003_documentchunk.py  0004_workflow_project_name.py  __init__.py
apps/workflows/nodes/: __init__.py  base.py  implementations.py  registry.py
apps/workflows/tests/: __init__.py  test_api.py  test_approvals.py  test_executor.py  test_models.py  test_nodes.py
compose/production/django/: Dockerfile
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
docs/plans/: 2026-07-20-dx-os-workflow-plan.md  2026-07-20-enterprise-workspace-and-ui-plan.md  2026-07-20-hpdi-workflow-nodes-plan.md  2026-07-20-real-rag-embeddings-plan.md  2026-07-20-workflow-frontend-ui-plan.md
docs/specs/: 2026-07-20-dx-os-workflow-design.md  OLP35-DXOS-Requirements.md  SPEC-boilerplate-management-system.md
docs/superpowers/plans/: 2026-07-20-task3-rag-cosine-similarity.md
docs/superpowers/specs/: 2026-07-20-hpdi-workflow-nodes-design.md  2026-07-20-workflow-frontend-ui-design.md
e2e/: admin.spec.ts  playwright.config.ts
edu_ecosystem/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  routes.tsx
frontend/src/api/: client.ts
frontend/src/api/endpoints/: auth.ts  users.ts
frontend/src/api/hooks/: useAuth.ts  useUsers.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  table.tsx
frontend/src/pages/: DashboardPage.tsx  DocumentsPage.tsx  LoginPage.tsx  MessagesPage.tsx  PublicFormPage.tsx  SettingsPage.tsx  StackPage.tsx  UsersPage.tsx  WorkflowRunsPage.tsx
frontend/src/pages/workflows/: WorkflowEditorPage.tsx  (+1 more)
frontend/src/stores/: auth.store.ts  workflow.store.ts
frontend/src/types/: index.ts
locale/en/LC_MESSAGES/: django.po
locale/vi/LC_MESSAGES/: django.po
